# Aggregated-Model-Descriptions

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .secrets.baseline  404.html  404.qmd  CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.md  _quarto.yml  _typos.toml  about.html  about.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
assets/workshop/: paste_bin.txt
examples/forest_fires_Robert-TBCFRDTFTCI-ED2-2007/: forest_fire_Robert-TBCFRDTFTCI-ED2-2007.py  forest_fire_Robert-TBCFRDTFTCI-ED2-2007.qmd
posts/AMLRMFTIP-UPX3/: index.html  index.qmd
posts/post-with-code/: index.html  index.qmd
posts/welcome/: index.html
site_libs/bootstrap/: bootstrap-1df595aef21d6855306221acafa31604.min.css  bootstrap.min.css
