[tool.poetry]
name = "aggregated-model-descriptions"
version = "0.0.1"
description = "A website with descriptions and some documentation for models that the author and friends have built. "
authors = ["O957 <127630341+O957@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
