[project]
name = "o957-examples"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "Examples, including models and diagrams, that I designed and which are small enough to not warrant their own repositories."
license = "Apache-2.0"
readme = "README.md"
keywords = ["data-science", "statistics", "modeling", "inference", "forecasting" ]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/O957/O957-Examples"
Issues = "https://github.com/O957/O957-Examples/issues"
"Author GitHub" = "https://github.com/O957"

[tool.ruff.lint.mccabe]
max-complexity = 12
